syntax = "proto3";

package payment;

option go_package = "github.com/ecommerce/payment-service/pb";

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
  rpc GetPaymentStatus (GetPaymentStatusRequest) returns (PaymentStatus);
  rpc RefundPayment (RefundPaymentRequest) returns (PaymentResponse);
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

message PaymentRequest {
  string order_id = 1;
  string user_id = 2;
  double amount = 3;
  string currency = 4;
  string payment_method = 5;
  PaymentDetails details = 6;
}

message PaymentDetails {
  string card_token = 1;
  string billing_address = 2;
}

message PaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  string status = 3;
  double amount = 4;
  string currency = 5;
  string message = 6;
  string created_at = 7;
}

message GetPaymentStatusRequest {
  string payment_id = 1;
  string order_id = 2;
}

message PaymentStatus {
  string payment_id = 1;
  string order_id = 2;
  string status = 3;
  double amount = 4;
  string currency = 5;
  string created_at = 6;
  string updated_at = 7;
}

message RefundPaymentRequest {
  string payment_id = 1;
  string order_id = 2;
  string reason = 3;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string service = 2;
}
